# longitudinal-tomography

./: .coveralls.yml  .environment.yml  .gitignore  .gitlab-ci.yml  CHANGELOG.rst  CMakeLists.txt  MANIFEST.in  MapInfo.py  Numeric.py  README.rst  Reconstruct.py  Tomography.py  compile_gpu.py  environment.yaml  environment.yml  pyproject.toml  requirements.txt  run.py  setup.cfg  setup.py  tomoscope_interface.py
__EXAMPLES/example_scripts/: EX_00_Run_from_file_name.py  EX_00_Run_from_file_name_gpu.py  EX_01_Run_program.py  EX_01_Run_tomo_from_input_file.py  EX_01_Run_tomo_from_input_file_gpu.py  EX_02_Manual_parameter.py  EX_02_Manual_parameter_obj.py  EX_02_Manual_parameter_obj_gpu.py  EX_03_Voltage_calibration.py  EX_03_Voltage_calibration_gpu.py  EX_04_Varying_input.py  EX_04_Varying_input_gpu.py  EX_05_External_tracking.py  EX_05_External_tracking_gpu.py  EX_06_Manual_reconstruction.py  EX_06_minimalistic_script.py  EX_07_Benchmark.py  EX_08_Benchmark_Voltagecalib.py  EX_09_Benchmark_Autotomo.py
__EXAMPLES/example_scripts/resources/: INDIVShavingC325_waterfall.npy  INDIVShavingC325_xcoords.npy.REMOVED.git-id  INDIVShavingC325_ycoords.npy.REMOVED.git-id
__EXAMPLES/example_scripts/utils/: exs_tools.py
__EXAMPLES/input_files/: tracked_xp.npy.REMOVED.git-id  tracked_yp.npy.REMOVED.git-id  waterfall.npy
__doc/source/: conf.py  index.rst
__doc/source/modules/: assertions.rst  compat.rst  compile.rst  cpp_routines.rst  data.rst  exceptions.rst  tomography.rst  tracking.rst  utils.rst
docs/source/: conf.py  index.rst
docs/source/modules/: assertions.rst  compat.rst  cpp_routines.rst
longitudinal_tomography/: __init__.py  assertions.py  compile.py  exceptions.py  shortcuts.py  tomoscope_interface.py
longitudinal_tomography/compat/: fortran.py  tomoscope.py
longitudinal_tomography/cpp_routines/: data_treatment.cpp  data_treatment.h  docs.h  kick_and_drift.cpp  kick_and_drift.h  libtomo.cpp  libtomo.h  libtomo.pyi  reconstruct.cpp  reconstruct.h  sin.h  tomolib_wrappers.py
longitudinal_tomography/cuda_kernels/: __init__.py  compile_kernels.sh  kick_and_drift.cu  kick_and_drift.cubin  kick_and_drift_double.cu  kick_and_drift_single.cu  reconstruct.cu  reconstruct_double.cu  reconstruct_single.cu
longitudinal_tomography/data/: data_treatment.py  post_process.py  pre_process.py  profiles.py
longitudinal_tomography/python_routines/: data_treatment.py  kick_and_drift.py  kick_and_drift_cpp_wrapper.py  kick_and_drift_cuda.py  kick_and_drift_cupy.py  kick_and_drift_numba.py  reconstruct.py  reconstruct_cuda.py  reconstruct_cupy.py  reconstruct_numba.py
longitudinal_tomography/tomography/: __init__.py  __tomography.py  __tomography_cupy.py  tomography.py  tomography_cupy.py  tomography_multibunch.py
longitudinal_tomography/tracking/: __init__.py  __tracking.py  machine.py  machine_base.py  particles.py  phase_space_info.py  programs_machine.py  tracking.py
longitudinal_tomography/utils/: __init__.py  data_treatment.py  execution_mode.py  physics.py  tomo_config.py  tomo_input.py  tomo_output.py  tomo_run.py  tomographics.py
tmp/: debunching.py
tomo/: Main_testing.py  MapInfo.py  Numeric.py  Parameters.py  Physics.py  Reconstruct.py  Time_space.py  Tomography.py  __init__.py  __main__.py  assertions.py  compile.py  data_treatment.py  exceptions.py  fit.py  machine.py  main.py  main_testing.py  map_info.py  new_machine.py  new_tomo_cpp.py  new_tomography.py  numeric.py  parameters.py  particles.py  phase_space_info.py  physics.py  profiles.py  reconstruct.py  reconstruct_c.py  reconstruct_py.py  run.py  shortcuts.py  test.profile  time_space.py  tomography.py  tomoscope_interface.py  tracking.py
tomo/compat/: fortran.py  machine.py  tomoscope.py
tomo/cpp_files/: drift.cpp  kick.cpp  longtrack.cpp  longtrack_func.cpp  map_weights.cpp
tomo/cpp_routines/: data_treatment.cpp  data_treatment.h  docs.h  drift.cpp  kick.cpp  kick_and_drift.cpp  kick_and_drift.h  libtomo.cpp  libtomo.h  longtrack.cpp  reconstruct.cpp  reconstruct.h  reconstruct_old_alg.cpp  test_kick_and_drift.py  test_reconstruct.py  tomo_routines.cpp  tomolib_wrappers.py
tomo/data/: __init__.py  data_treatment.py  post_process.py  pre_process.py  profiles.py
tomo/gpu_routines/: kick.py
tomo/particle_tracking/: tracking.py  tracking_cpp.py  tracking_gpu.py
tomo/tomography/: __tomography.py  new_tomo_cpp.py  new_tomography.py  tomography.py  tomography_cpp.py  tomography_py.py
tomo/tracking/: __init__.py  __tracking.py  machine.py  machine_base.py  particle_tracker.py  particles.py  phase_space_info.py  programs_machine.py  tracking.py  tracking_cpp.py
tomo/utils/: __init__.py  assertions.py  data_treatment.py  exceptions.py  physics.py  tomo_input.py  tomo_io.py  tomo_output.py  tomo_run.py
tomo_action/: .tomo_vo.intelmp.swp  README.txt  __init__.py  analyze.py  main.py  system_handling.py
tomo_action/fortran/: tomo_fortran
tools/: build-wheels.sh  test-wheels.sh
unit_tests/: C500values.py  __init__.py  commons.py  machine_args.yml  test_assertions.py  test_map.py  test_new_tomography.py  test_numeric.py  test_parameters.py  test_particles.py  test_physics.py  test_reconstruct.py  test_reconstruct_c.py  test_reconstruct_cpp.py  test_reconstruction.py  test_shortcuts.py  test_time_space.py  test_tomography.py  test_tracking.py
unit_tests/compat/: test_compat.py
unit_tests/cpp_routines/: test_tomolib_wrappers.py
unit_tests/data/: test_data_treatment.py  test_post_process.py  test_pre_process.py  test_profiles.py
unit_tests/resources/: tracked_xp.npy.REMOVED.git-id  tracked_yp.npy.REMOVED.git-id  vself_INDIVShavingC325.npy  waterfall_INDIVShavingC325.npy
unit_tests/resources/C500MidPhaseNoise/: C500values.py  imax.npy  (+18 more)
unit_tests/tomography/: test_tomography.py  test_tomography_cpp.py
unit_tests/tracking/: test_machine.py  test_particles_class.py  test_particles_module_funcs.py  test_phase_space_info.py  test_programs_machine.py  test_tracking.py
unit_tests/utils/: test_assertions.py  test_data_treatment.py  test_physics.py  test_tomo_input.py  test_tomo_output.py
