[project]
name = "longitudinal_tomography"
description = "A python library for longitudinal particle beam tomography"
license = { text = "GNU General Public License version 3" }
readme = "README.rst"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">= 3.9"
dependencies = [
    "matplotlib",
    "multipledispatch",
    "numpy",
    "scipy",
]
dynamic = ["version"]

[[project.authors]]
name = "Anton Lu"
email = "anton.lu@cern.ch"

[project.urls]
homepage = "https://gitlab.cern.ch/longitudinaltomography/tomographyv3"

[project.optional-dependencies]
test = [
    "coverage",
    "coverage-badge",
    "flake8",
    "pylint",
    "pytest-cov",
    "pyyaml",
]
testing = [
    "pyyaml",
]
gpu = [
    "cupy"
]

[build-system]
requires = ["setuptools >= 61", "setuptools_scm[toml] ~= 6.0", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

# For dynamic versioning
[tool.setuptools_scm]
write_to = "longitudinal_tomography/_version.py"
local_scheme = "no-local-version"

[tool.setuptools]
include-package-data = true
packages = [
    "longitudinal_tomography",
    "longitudinal_tomography.compat",
    "longitudinal_tomography.cpp_routines",
    "longitudinal_tomography.data",
    "longitudinal_tomography.tomography",
    "longitudinal_tomography.tracking",
    "longitudinal_tomography.utils",
    "tomo",
]
platforms = [
    "Windows",
    "Linux",
]

[tool.setuptools.dynamic.version]
attr = "longitudinal_tomography.__version__"

[tool.flake8]
extend-ignore = "\nF"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "unit_tests",
]