[metadata]
name = beam_tomography
version = 1.0.0
description = A python library for longitudinal particle beam tomography
long_description = file: README.rst
url = https://gitlab.cern.ch/anlu/tomographyv3
author = Anton Lu
author_email = anton.lu@cern.ch
license = GNU General Public Licence version 3
platform = Windows, Linux
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public Licence version 3
    Operating System :: OS Independent

[options]
include_package_data = true
packages = tomo
test_suite = unit_tests

python_requires = >= 3.6
setup_requires = setuptools
install_requires =
    numba
    numpy
    scipy
    matplotlib
tests_require =
    pytest-cov



