[metadata]
name = longitudinal_tomography
version = attr: tomo.__version__
description = A python library for longitudinal particle beam tomography
long_description = file: README.rst
url = https://gitlab.cern.ch/anlu/tomographyv3
author = Anton Lu
author_email = anton.lu@cern.ch
license = GNU General Public License version 3
platform = Windows, Linux
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
include_package_data = true
packages =
    tomo
    tomo.compat
    tomo.cpp_routines
    tomo.data
    tomo.tomography
    tomo.tracking
    tomo.utils
test_suite = unit_tests

python_requires = >= 3.6
setup_requires =
    setuptools
    numpy
install_requires =
    numpy
    scipy
    matplotlib
tests_require =
    flake8
    pytest-cov
    pyyaml

[flake8]
extend-ignore =
    F
