[metadata]
name = longitudinal-tomography
version = attr: tomo.__version__
description = A python library for longitudinal particle beam tomography
long_description = file: README.rst
url = https://gitlab.cern.ch/longitudinaltomography/tomographyv3
author = Anton Lu
author_email = anton.lu@cern.ch
license = GNU General Public License version 3
platform = Windows, Linux
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
include_package_data = true
packages =
    tomo
    tomo.compat
    tomo.cpp_routines
    tomo.data
    tomo.tomography
    tomo.tracking
    tomo.utils
test_suite = unit_tests

python_requires = >= 3.6
install_requires =
    matplotlib
    multipledispatch
    numpy
    scipy
tests_require =
    pyyaml

[options.extras_require]
test =
    coverage
    coverage-badge
    flake8
    pylint
    pytest-cov
    pyyaml

[flake8]
extend-ignore =
    F
